--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --config webpack.config.js",
     "start": "node index.js"
   },
   "author": "",
@@ -13,6 +13,10 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "util": "^0.12.3",
     "webpack": "^5.17.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.4.0"
   }
 }
